// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="media"
>
  <MediaBody>
    body
  </MediaBody>
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="media"
>
  <MediaObject>
    object
  </MediaObject>
  <MediaBody>
    body
  </MediaBody>
</div>
`;
